# Bitmap-Image-Writer

./: .gitignore  README.md  WORKSPACE.bazel  compile.bat  helloworld.cpp  run.bat
lib/wx/: BUILD.bazel
lib/wx/lib/vc_dll/: wxbase31u.exp  wxbase31u_net.exp  wxbase31u_xml.exp  wxbase31ud.exp  wxbase31ud_net.exp  wxbase31ud_xml.exp  wxmsw31u_adv.exp  wxmsw31u_aui.exp  wxmsw31u_gl.exp  wxmsw31u_html.exp  wxmsw31u_media.exp  wxmsw31u_propgrid.exp  wxmsw31u_qa.exp  wxmsw31u_ribbon.exp  wxmsw31u_richtext.exp  wxmsw31u_stc.exp  wxmsw31u_webview.exp  wxmsw31u_xrc.exp  wxmsw31ud_adv.exp  wxmsw31ud_aui.exp  wxmsw31ud_gl.exp  wxmsw31ud_html.exp  wxmsw31ud_media.exp  wxmsw31ud_propgrid.exp  wxmsw31ud_qa.exp  wxmsw31ud_ribbon.exp  wxmsw31ud_richtext.exp  wxmsw31ud_stc.exp  wxmsw31ud_webview.exp  wxmsw31ud_xrc.exp
lib/wx/lib/vc_x64_dll/: wxbase31u.exp  wxbase31u_net.exp  wxbase31u_xml.exp  wxbase31ud.exp  wxbase31ud_net.exp  wxbase31ud_xml.exp  wxmsw31u_adv.exp  wxmsw31u_aui.exp  wxmsw31u_gl.exp  wxmsw31u_html.exp  wxmsw31u_media.exp  wxmsw31u_propgrid.exp  wxmsw31u_qa.exp  wxmsw31u_ribbon.exp  wxmsw31u_richtext.exp  wxmsw31u_stc.exp  wxmsw31u_webview.exp  wxmsw31u_xrc.exp  wxmsw31ud_adv.exp  wxmsw31ud_aui.exp  wxmsw31ud_gl.exp  wxmsw31ud_html.exp  wxmsw31ud_media.exp  wxmsw31ud_propgrid.exp  wxmsw31ud_qa.exp  wxmsw31ud_ribbon.exp  wxmsw31ud_richtext.exp  wxmsw31ud_stc.exp  wxmsw31ud_webview.exp  wxmsw31ud_xrc.exp
src/app/: BUILD.bazel  gui.cpp  gui.h  main.cpp
src/bitmaps/formats/pixel/: BUILD.bazel  format.cpp  format.h
src/bitmaps/image/: BUILD.bazel  image.cpp  image.h
src/bitmaps/packet/: BUILD.bazel  packet.h
src/bitmaps/packet/headers/: BUILD.bazel  headers.h
src/bitmaps/packet/pixel-array/: BUILD.bazel  array.cpp  array.h  colours.cpp
src/bitmaps/reader/: BUILD.bazel  bitmap_reader.cpp  bitmap_reader.h
src/bitmaps/reader/headers/: BUILD.bazel  dib_header_reader.cpp  dib_header_reader.h  file_header_reader.cpp  file_header_reader.h
src/bitmaps/reader/image/: BUILD.bazel  reader.cpp  reader.h
src/bitmaps/reader/pixel-array/: BUILD.bazel  reader.cpp  reader.h
src/bitmaps/writer/headers/: BUILD.bazel
src/bitmaps/writer/image/: BUILD.bazel  writer.cpp  writer.h
src/common/: BUILD.bazel  array.h  arrays.h  byte_array.cpp  byte_array.h  byte_array_builder.cpp  byte_array_builder.h  bytes_conversion.cpp  bytes_conversion.h  bytes_converter.cpp  bytes_converter.h  file_opener.cpp  file_opener.h  filesystem.cpp  filesystem.h  index.h
src/common/byte-array/: byte.h  byte_array.cpp  byte_array.h  byte_array_builder.cpp  byte_array_builder.h  byte_conversion.cpp  byte_conversion.h  bytes_conversion.cpp  bytes_conversion.h
src/common/filesystem/: filesystem.cpp  filesystem.h
src/common/matrix-2d/: matrix_2d.h  matrix_row.h
src/containers/: BUILD.bazel  index.h
src/containers/byte-array/: BUILD.bazel  byte_array.cpp  byte_array.h  byte_conversion.cpp  byte_conversion.h
src/containers/matrix-2d/: BUILD.bazel  matrix_2d.h
src/graphics/: BUILD.bazel  bitmap.cpp  bitmap.h
src/graphics/bitmaps/: BUILD.bazel  bitmap.cpp  bitmap.h  bitmap_image.cpp  bitmap_image.h  file_header.cpp  file_header.h  header.cpp  header.h  info_header.cpp  info_header.h  pixel.cpp  pixel.h  pixel_array.cpp  pixel_array.h
src/graphics/bitmaps/format-parser/: BUILD.bazel  format_parser.cpp  format_parser.h
src/graphics/bitmaps/formats/: BUILD.bazel  format.cpp  format.h  formats.cpp  formats.h
src/graphics/bitmaps/headers/: dib_header.cpp  dib_header.h  file_header.cpp  file_header.h  header.cpp  header.h  info_header.cpp  info_header.h
src/graphics/bitmaps/packet/: BUILD.bazel  bitmap_packet.h  packet.h  rgb_bitmap_packet.h  rgba_bitmap_packet.h
src/graphics/bitmaps/reader/: BUILD.bazel  bitmap_reader.cpp  bitmap_reader.h  dib_header_reader.cpp  file_header_reader.cpp  pixel_array_reader.cpp  pixel_reader_data.h
src/graphics/bitmaps/writer/: BUILD.bazel  writer.cpp  writer.h
src/graphics/colours/: BUILD.bazel  colours.h
src/graphics/image-rendering/: BUILD.bazel  image_renderer.cpp  image_renderer.h
src/graphics/shapes/: BUILD.bazel  straight_line.cpp  straight_line.h  triangle.cpp  triangle.h
src/gui/: BUILD.bazel  app.cpp  gui.cpp  gui.h
src/main/bitmaps/image/: BUILD.bazel  image.cpp  image.h
src/maths/: BUILD.bazel  helloworld.cpp  printablemessage.cpp  printablemessage.h
src/maths/binary-ops/: BUILD.bazel  binary_ops.cpp  binary_ops.h
src/maths/binary_ops/: binary_ops.cpp  binary_ops.h
src/maths/matrix/: BUILD.bazel  column.cpp  column.h  matrix.cpp  matrix.h  matrix_vector.cpp  matrix_vector.h
src/maths/vector/: BUILD.bazel  vector.cpp  vector.h
test/src/bitmaps/: BUILD.bazel  bitmaps.cpp  formats.cpp  packet.cpp  reader.cpp  writer.cpp
test/src/bitmaps/fixtures/: BUILD.bazel  test.cpp  test.h
test/src/bitmaps/formats/: BUILD.bazel  asserts.cpp  fixture.cpp  fixture.h  formats.cpp  setup.cpp  tests.cpp
test/src/bitmaps/image/: BUILD.bazel  asserts.cpp  fixture.cpp  fixture.h  setup.cpp  tests.cpp
test/src/bitmaps/packet/: BUILD.bazel  fixture.cpp  fixture.h  packet.cpp
test/src/bitmaps/reader/: BUILD.bazel  asserts.cpp  fixture.cpp  fixture.h  reader.cpp  setup.cpp  tests.cpp
test/src/bitmaps/test-utilities/: BUILD.bazel  comparators.cpp  set_up.cpp  set_up.h
test/src/bitmaps/utilities/: bitmap_image_comparators.cpp  bitmap_set_up.cpp  bitmap_set_up.h  comparators.cpp  comparators.h  set_up.cpp  set_up.h
test/src/bitmaps/writer/: BUILD.bazel  asserts.cpp  byte_array_asserts.cpp  fixture.cpp  fixture.h  header_asserts.cpp  packet_asserts.cpp  set_up.cpp  tests.cpp  writer.cpp
test/src/common-tests/: BUILD.bazel  array_tests.cpp  byte_array_tests.cpp  byte_conversion_tests.cpp  bytes_converter_tests.cpp  filesystem_tests.cpp  matrix_tests.cpp
test/src/container-tests/: BUILD.bazel
test/src/graphics-tests/: BUILD.bazel  bitmap_tests.cpp  pixel_array_tests.cpp
test/src/gui/: BUILD.bazel  tests.cpp
test/src/maths-tests/: BUILD.bazel  binary_ops_tests.cpp  maths_test.cpp  matrix_tests.cpp  test.cpp  vector_tests.cpp
(+874 files in other folders)
