load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build-config:wx_compiler.bzl", "WX_COMPILER_OPTIONS")

cc_library(
  name = "wx",
  visibility = ["//visibility:public"],
  hdrs = glob([
    "include/wx/*.h",
    "include/wx/**/*.h",
    "include/msvc/wx/*.h",
    "lib/vc14x_x64_dll/**/*.h"
  ]),
  includes = [
    "include",
    "include/msvc",
  ],
  srcs = glob([
    "lib/vc14x_x64_dll/wxbase31u.lib",
    "lib/vc14x_x64_dll/wxbase31u_*.lib",
    "lib/vc14x_x64_dll/wxmsw31u_*.lib",
    "lib/vc14x_x64_dll/wxexpat.lib",
    "lib/vc14x_x64_dll/wxjpeg.lib",
    "lib/vc14x_x64_dll/wxpng.lib",
    "lib/vc14x_x64_dll/wxregexu.lib",
    "lib/vc14x_x64_dll/wxscintilla.lib",
    "lib/vc14x_x64_dll/wxtiff.lib",
    "lib/vc14x_x64_dll/wxzlib.lib",
  ]),
  copts = WX_COMPILER_OPTIONS
)