load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build-config:wx_compiler.bzl", "WX_COMPILER_OPTIONS")

cc_library(
  name = "wx",
  visibility = ["//visibility:public"],
  hdrs = glob([
    "include/wx/*.h",
    "include/wx/**/*.h",    
    "include/msvc/wx/*.h",
    "lib/vc14x_x64_dll/**/*.h",
    "lib/vc14x_x64_dll/mswud/wx/setup.h",
  ]),
  includes = [
    "include",
    "include/msvc",
  ],
  srcs = glob([
    "lib/vc14x_x64_dll/*.dll",
    "lib/vc14x_x64_dll/*.lib",    
  ]),
  copts = WX_COMPILER_OPTIONS
)