cc_library(
    name = "common",
    hdrs = [
        "byte.h", "byte_array_builder.h", "bytes_conversion.h",
        "filesystem.h"
    ],
    srcs = ["byte_array_builder.cpp", "bytes_conversion.cpp",
        "filesystem.cpp"
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)
