cc_library(
    name = "common",
    hdrs = [
        "byte-array/byte.h",
        "byte-array/byte_array.h",
        "byte-array/byte_array_builder.h",
        "byte-array/bytes_conversion.h",
        "filesystem/filesystem.h",
        "matrix-2d/matrix_2d.h",
        "matrix-2d/matrix_row.h",
        "index.h"
    ],
    srcs = [
        "byte-array/byte_array.cpp",
        "byte-array/byte_array_builder.cpp",
        "byte-array/bytes_conversion.cpp",
        "filesystem/filesystem.cpp"
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)
