cc_library(
    name = "graphics",
    srcs = [
        "bitmaps/headers/header.cpp",
        "bitmaps/headers/file_header.cpp",
        "bitmaps/headers/dib_header.cpp",
        "bitmaps/pixel.cpp",
        "bitmaps/reader/bitmap_reader.cpp"
    ],
    hdrs = [
        "bitmaps/headers/header.h",
        "bitmaps/headers/file_header.h",
        "bitmaps/headers/dib_header.h",
        "bitmaps/pixel.h",
        "bitmaps/reader/bitmap_reader.h"
    ],
    deps = ["//src/common:common"],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)
