cc_library(
    name = "graphics",
    srcs = [
        "bitmaps/packet/headers/header.cpp",
        "bitmaps/packet/headers/file_header.cpp",
        "bitmaps/packet/headers/dib_header.cpp",
        "bitmaps/packet/pixels/pixel.cpp",
        "bitmaps/packet/pixels/pixel_array.cpp",
        "bitmaps/reader/bitmap_reader.cpp"
    ],
    hdrs = [
        "bitmaps/packet/headers/header.h",
        "bitmaps/packet/headers/file_header.h",
        "bitmaps/packet/headers/dib_header.h",
        "bitmaps/packet/pixels/pixel.h",
        "bitmaps/packet/pixels/pixel_array.h",
        "bitmaps/reader/bitmap_reader.h"
    ],
    deps = ["//src/common:common"],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)
