cc_library(
    name = "pkg",
    hdrs = glob(["*.h"]),
    srcs = glob(["*.cpp"]),
    visibility = ["//visibility:public"],
    deps = [
        "//lib/wx:wx"
    ],
    copts = [
        "-D__WXMSW__",
        "-DwxUSE_GUI=1",
        "-DUNICODE",
        "-D_UNICODE",
        "-DWIN64",
        "-DWINDOWS",
        "-DWINVER=0x0500",
        "-D_CRT_SECURE_NO_DEPRECATE",
        "-D_CRT_NONSTDC_NO_DEPRECATE",
    ],
)