load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build-config:wx_compiler.bzl", "WX_COMPILER_OPTIONS")

cc_library(
    name = "pkg",
    hdrs = glob(["*.h"]),
    srcs = glob(["*.cpp"]),
    visibility = ["//visibility:public"],
    deps = [
        "//lib/wx:wx"
    ],
    copts = WX_COMPILER_OPTIONS
)