# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_binary

cc_library(
    name = "vectors",
    srcs = ["vector/vector.cpp"],
    hdrs = ["vector/vector.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/maths:binary_ops",
        "//src/common:arrays"
    ]
)

cc_library(
    name = "binary_ops",
    srcs = ["binary_ops/binary_ops.cpp"],
    hdrs = ["binary_ops/binary_ops.h"],
    visibility = ["//visibility:public"]
)