cc_library(
    name = "binary_ops",
    hdrs = ["binary_ops/binary_ops.h"],
    srcs = ["binary_ops/binary_ops.cpp"],
    visibility = ["//visibility:public"]
)

cc_library(
    name = "vectors",
    hdrs = ["vector/vector.h"],
    srcs = [
        "vector/vector.cpp"
    ],
    visibility = ["//visibility:public"],
    deps = ["//src/maths:binary_ops"]
)

cc_library(
    name = "matrices",
    hdrs = ["matrix/matrix.h", "matrix/column.h"],
    srcs = ["matrix/matrix.cpp", "matrix/column.cpp"],
    visibility = ["//visibility:public"],
    deps = ["//src/maths:vectors"]
)
