cc_library(
    name = "pkg",
    hdrs = glob(["*.h",]),
    srcs = glob(["*.cpp"]),
    deps = [
        "//src/containers:pkg",
        "//src/files:pkg",
        "//src/utilities:pkg",
        "//src/bitmaps/packet:pkg",
        "//src/bitmaps/formats:pkg",
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)