cc_library(
    name = "image",
    hdrs = glob(["*.h",]),
    srcs = glob(["*.cpp"]),
    deps = [
        "//src/containers",
        "//src/files",
        "//src/utilities",
        "//src/bitmaps/packet",
        "//src/bitmaps/formats",
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)