cc_library(
    name = "pkg",
    hdrs = [
        "packet.h",
    ],
    srcs = [],
    deps = [
        "//src/containers:pkg",
        "//src/bitmaps/packet/headers:pkg",
        "//src/bitmaps/packet/pixel-array:pkg",
        "//src/bitmaps/formats:pkg"
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)