cc_library(
    name = "packet",
    hdrs = [
        "packet.h",
    ],
    srcs = [],
    deps = [
        "//src/containers",
        "//src/bitmaps/packet/headers",
        "//src/bitmaps/packet/pixel-array",
        "//src/bitmaps/formats"
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)