cc_library(
    name = "bitmaps",
    hdrs = ["bitmap_image.h"],
    srcs = ["bitmap_image.cpp"],
    deps = [
        "//src/common:common",
        "//src/graphics/colours:colours",
        "//src/graphics/bitmaps/packet:bitmap_packet",
        "//src/graphics/bitmaps/reader:bitmap_reader"
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)
