cc_library(
    name = "shapes",
    hdrs = [
        "triangle.h",
        "straight_line.h"
    ],
    srcs = [
        "triangle.cpp",
        "straight_line.cpp"
    ],
    deps = [
        "//src/graphics/bitmaps:bitmaps",
        "//src/maths:vectors",
        "//src/maths:matrices"
    ],
    visibility = ["//visibility:public"]
)
