load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "byte_array_tests",
    size = "small",
    srcs = ["byte_array_tests.cpp", "byte_conversion_tests.cpp"],
    deps = [
        "@com_google_googletest//:gtest_main",
        "//src/common:common"
    ],
)

cc_test(
    name = "filesystem_tests",
    size = "small",
    srcs = ["filesystem_tests.cpp"],
    deps = [
        "@com_google_googletest//:gtest_main",
        "//src/common:common"
    ],
)

cc_test(
    name = "matrix_2d_tests",
    size = "small",
    srcs = ["matrix_tests.cpp"],
    deps = [
        "@com_google_googletest//:gtest_main",
        "//src/common:common"
    ],
)