load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "tests",
    size = "small",
    srcs = glob(["*.cpp"]),
    deps = [
        "@googletest//:gtest_main",
        "//src/gui:pkg"
    ],
    copts = [
        "-D__WXMSW__",
        "-DwxUSE_GUI=1",
        "-DUNICODE",
        "-D_UNICODE",
        "-DWIN32",
        "-DWINDOWS",
        "-DWINVER=0x500",
        "-D_CRT_SECURE_NO_DEPRECATE",
        "-D_CRT_NONSTDC_NO_DEPRECATE",
    ],
)