load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "test_me",
    size = "small",
    srcs = ["vector_tests.cpp"],
    deps = [
        "@com_google_googletest//:gtest_main",
        "//src/maths:vectors"
    ],
)

cc_test(
    name = "binary_ops_tests",
    size = "small",
    srcs = ["binary_ops_tests.cpp"],
    deps = [
        "@com_google_googletest//:gtest_main",
        "//src/maths:binary_ops"
    ],
)