cc_library(
    name = "bitmap_pixel_format",
    hdrs = glob(["*.h",]),
    srcs = glob(["*.cpp"]),
    deps = [
        "//src/bitmaps/formats/colours:bitmap_colours",
        "//src/containers:containers",
        "//src/files:files",
        "//src/utilities:utilities",
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)