cc_library(
    name = "pkg",
    hdrs = glob(["*.h",]),
    srcs = glob(["*.cpp"]),
    deps = [
        "//src/bitmaps/formats/colours:pkg",
        "//src/containers:pkg",
        "//src/files:pkg",
        "//src/utilities:pkg",
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)