cc_library(
    name = "pkg",
    hdrs = [
        "file-header/header.h",
        "file-header/values.h",
        "dib-header/header.h",
        "dib-header/values.h",
        "headers.h"
    ],
    srcs = [
        "file-header/header.cpp",
        "dib-header/header.cpp"
    ],
    deps = [
        "//src/bitmaps/formats:pkg",
        "//src/containers:pkg"
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)