cc_library(
    name = "headers",
    hdrs = [
        "file-header/header.h",
        "file-header/values.h",
        "dib-header/header.h",
        "dib-header/values.h",
        "headers.h"
    ],
    srcs = [
        "file-header/header.cpp",
        "dib-header/header.cpp"
    ],
    deps = [
        "//src/bitmaps/formats",
        "//src/containers"
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)