cc_library(
    name = "bitmap_header_readers",
    hdrs = glob(["*.h"]),
    srcs = glob(["*.cpp"]),
    deps = [
        "//src/containers:containers",
        "//src/bitmaps/packet:bitmap_packet",        
        "//src/utilities:utilities"
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)