cc_library(
    name = "bitmap_image_reader",
    hdrs = glob(["*.h"]),
    srcs = glob(["*.cpp"]),
    deps = [
        "//src/containers:containers",
        "//src/files:files",
        "//src/bitmaps/packet:bitmap_packet",
        "//src/bitmaps/reader/headers:bitmap_header_readers",
        "//src/bitmaps/reader/pixel-array:bitmap_pixel_array_reader",
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)