cc_library(
    name = "pkg",
    hdrs = glob(["*.h"]),
    srcs = glob(["*.cpp"]),
    deps = [
        "//src/containers:pkg",
        "//src/files:pkg",
        "//src/bitmaps/image:pkg",
        "//src/bitmaps/reader/headers:pkg",
        "//src/bitmaps/reader/pixel-array:pkg",
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)