cc_library(
    name = "image",
    hdrs = glob(["*.h"]),
    srcs = glob(["*.cpp"]),
    deps = [
        "//src/containers",
        "//src/files",
        "//src/bitmaps/image",
        "//src/bitmaps/reader/headers",
        "//src/bitmaps/reader/pixel-array",
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)