cc_library(
    name = "bitmap_pixel_array_reader",
    hdrs = glob(["*.h"]),
    srcs = glob(["*.cpp"]),
    deps = [
        "//src/containers:containers",
        "//src/files:files",
        "//src/bitmaps/packet:bitmap_packet"
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)