cc_library(
    name = "pkg",
    hdrs = glob(["*.h"]),
    srcs = glob(["*.cpp"]),
    deps = [
        "//src/containers:pkg",
        "//src/bitmaps/image:pkg",
        "//src/bitmaps/writer/headers:pkg",
        "//src/bitmaps/writer/pixel-array:pkg",
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)
