cc_library(
    name = "image",
    hdrs = glob(["*.h"]),
    srcs = glob(["*.cpp"]),
    deps = [
        "//src/containers",
        "//src/bitmaps/image",
        "//src/bitmaps/writer/headers",
        "//src/bitmaps/writer/pixel-array",
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)
