cc_library(
    name = "bitmap_formats",
    hdrs = glob(["*.h",]),
    srcs = glob(["*.cpp"]),
    deps = [
        "//src/containers:containers",
        "//src/files:files",
        "//src/utilities:utilities",
        "//src/graphics/bitmaps/packet/headers:bitmap_headers"
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)