cc_library(
    name = "bitmap_packet",
    hdrs = [
        "rgb_bitmap_packet.h",
        "rgba_bitmap_packet.h"
    ],
    srcs = [],
    deps = [
        "//src/common:common",
        "//src/graphics/bitmaps/packet/headers:bitmap_packet_headers",
        "//src/graphics/bitmaps/packet/pixel-array:bitmap_packet_pixel_array",
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)