cc_library(
    name = "bitmap_reader",
    hdrs = [
        "bitmap_reader.h",
        "headers/file_header_reader.h",
        "headers/dib_header_reader.h",
    ],
    srcs = [
        "bitmap_reader.cpp",
        "headers/file_header_reader.cpp",
        "headers/dib_header_reader.cpp",
    ],
    deps = [
        "//src/common:common",
        "//src/graphics/bitmaps/packet:bitmap_packet",
        "//src/graphics/bitmaps/reader/pixel-array:pixel_array_reader"
    ],
    visibility = ["//visibility:public"],
    copts = ["/std:c++17"]
)